--- a/sk-web-example/index.html
+++ b/sk-web-example/index.html
@@ -14,8 +14,8 @@
 
   <!-- Votre HTML ici -->
 
-  <script src="text/javascript" src="js/jquery.js"></script>
-  <script src="text/javascript" src="js/jquery-ui.js"></script>
-  <script src="text/javascript" src="js/js.js"></script>
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/jquery-ui.js"></script>
+  <script type="text/javascript" src="js/js.js"></script>
 </body>
 </html>
