--- a/sk-webapp-ipad/index.html
+++ b/sk-webapp-ipad/index.html
@@ -2,9 +2,17 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
+
+  <!-- Nom de votre "app" -->
   <title>App name</title>
+
+  <!-- Pour éviter le zoom navigateur -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+  <!-- Pour permettre le mode plein écran en ajoutant le favori à l'écran d'accueil -->
   <meta name="apple-mobile-web-app-capable" content="yes">
+
+  <!-- Pour styliser la status bar sous iOS -->
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
   <link rel="stylesheet" href="css/normalize.css">
